--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>BikeNation</title>
     </head>
     <body>
-        <h1>BikeNation</h1>
+        <h1>BikeNation MARIJN</h1>
     </body>
 </html>
