--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>BikeNation</title>
     </head>
     <body>
-        <h1>BikeNation MARIJN</h1>
+        <!-- https://www.templatemonster.com/demo/54569.html -->
+        <h1>BikeNation</h1>
+        <div></div>
+        <div></div>
     </body>
 </html>
