Added an example with colors and fonts

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
     <head>
         <title>BikeNation</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="index.css" rel="stylesheet">
     </head>
     <body>
         <!-- https://www.templatemonster.com/demo/54569.html -->
-        <h1>BikeNation</h1>
-        <div></div>
-        <div></div>
+        <h1 class="roboto">BikeNation - <span>Best bike shop</span> in your neighbourhood! </h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. 
+            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, 
+            pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,
+             vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis
+              pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+               Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
+                feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. 
+            Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
     </body>
 </html>
