--- a/index.html
+++ b/index.html
@@ -21,5 +21,30 @@
         - Contact
         - Links/ index
        -->
+       <nav>
+           <div class="logo">
+               <img src="" alt="">
+           </div>
+           <div id="menu">
+                <ol>
+                    <li>Home</li>
+                    <li>Fiesten
+                        <ol>
+                            <li>Bakfiets</li>
+                            <li>Omafiets</li>
+                            <li>Mountainbike</li>
+                            <li>Elektricefiets</li>
+                        </ol>
+                    </li>
+                    <li>Gallerij</li>
+                    <li>Over Ons</li>
+                    <li>Contact</li>
+                    <li>Index</li>
+                </ol>
+           </div>
+       </nav>
+       <header>
+           
+       </header>
     </body>
 </html>
