--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
            </div>
            <div id="menu">
                 <ol>
-                    <li>Home</li>
-                    <li>Fiesten
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Fietsen</a>
                         <ol>
-                            <li>Bakfiets</li>
-                            <li>Omafiets</li>
-                            <li>Mountainbike</li>
-                            <li>Elektricefiets</li>
+                            <li><a href="">Bakfiets</a></li>
+                            <li><a href="">Omafiets</a></li>
+                            <li><a href="">Mountainbike</a></li>
+                            <li><a href="">Elektrischefiets</a></li>
                         </ol>
                     </li>
-                    <li>Gallerij</li>
-                    <li>Over Ons</li>
-                    <li>Contact</li>
-                    <li>Index</li>
+                    <li><a href="">Gallerij</a></li>
+                    <li><a href="">Over Ons</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Index</a></li>
                 </ol>
            </div>
        </nav>
