--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
            </div>
        </nav>
        <header>
-           
+           <h1>BikeNation</h1>
+           <h1>Everything </h1>
        </header>
     </body>
 </html>
