--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>BikeNation</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="index.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
        <!--
