--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <title>BikeNation</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link href="style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-       <!--
+        <link rel="stylesheet" href="normalize.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
+         <!--
         Pagina's
         - Home
         - Soorten Fietsen (Andere layout)
@@ -21,8 +20,10 @@
         - Contact
         - Links/ index
        -->
+    </head>
+    <body>
        <nav>
-           <div class="logo">
+           <div id="logo">
                <img src="" alt="">
            </div>
            <div id="menu">
