--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="normalize.css" rel="stylesheet">
-        <link href="index.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
        <!--
@@ -25,30 +25,32 @@
     </head>
     <body>
        <nav>
-           <div id="logo">
-               <img src="" alt="">
-           </div>
-           <div id="menu">
-                <ol>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Fietsen</a>
-                        <ol>
-                            <li><a href="">Bakfiets</a></li>
-                            <li><a href="">Omafiets</a></li>
-                            <li><a href="">Mountainbike</a></li>
-                            <li><a href="">Elektrischefiets</a></li>
-                        </ol>
-                    </li>
-                    <li><a href="">Gallerij</a></li>
-                    <li><a href="">Over Ons</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Index</a></li>
-                </ol>
+           <div class="wrapper">
+                <div id="logo">
+                    <img src="" alt="">
+                </div>
+                <div id="menu">
+                    <ol>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Fietsen</a>
+                            <ol>
+                                <li><a href="">Bakfiets</a></li>
+                                <li><a href="">Omafiets</a></li>
+                                <li><a href="">Mountainbike</a></li>
+                                <li><a href="">Elektrischefiets</a></li>
+                            </ol>
+                        </li>
+                        <li><a href="">Gallerij</a></li>
+                        <li><a href="">Over Ons</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Index</a></li>
+                    </ol>
+                </div>
            </div>
        </nav>
-       <header>
+       <!-- <header>
            <h1>BikeNation</h1>
            <h1>Everything </h1>
-       </header>
+       </header> -->
     </body>
 </html>
