--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                 </div>
            </div>
        </nav>
-       <!-- <header>
-           <h1>BikeNation</h1>
-           <h1>Everything </h1>
-       </header> -->
+       <header>
+           <div class="wrapper">
+               <div id="header-content">
+                <h1>Bike Nation</h1>
+                <h3>The best place for bike lovers</h3>  
+               </div>
+           </div>
+       </header>
     </body>
 </html>
