--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
        <header>
            <div class="wrapper">
                <div id="header-content">
-                <h1>Bike Nation</h1>
-                <h3>The best place for bike lovers</h3>  
+                
                </div>
            </div>
        </header>
+       <div id="contact">
+           
+       </div>
+       <main>
+
+       </main>
+       <!-- <footer></footer> -->
     </body>
 </html>
