--- a/index.html
+++ b/index.html
@@ -56,11 +56,33 @@
            </div>
        </header>
        <div id="contact">
-           
-       </div>
-       <main>
+           <div class="wrapper">
 
-       </main>
-       <!-- <footer></footer> -->
+           </div>
+       </div>
+       <div id="over-ons">
+            <div class="wrapper">
+                <h3>Titel</h3>
+                <div class="card">
+
+                </div>
+            </div>
+       </div>
+       <div id="slider">
+
+       </div>
+        <div id="soorten-fietsen">
+            <div class="wrapper">
+                <h3>Titel</h3>
+                <div id="container">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+            </div>
+        </div>
+       <footer>
+
+       </footer>
     </body>
 </html>
