--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
             </div>
         </div>
