--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="normalize.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+        <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
     </head>
     <body>
        <!--
@@ -26,13 +27,11 @@
     <body>
        <nav>
            <div class="wrapper">
-                <div id="logo">
-                    <img src="" alt="">
-                </div>
+                <img src="logo.png">
                 <div id="menu">
                     <ol>
                         <li><a href="">Home</a></li>
-                        <li><a href="">Fietsen</a>
+                        <li><a href="">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                             <ol>
                                 <li><a href="">Bakfiets</a></li>
                                 <li><a href="">Omafiets</a></li>
@@ -56,9 +55,8 @@
            </div>
        </header>
        <div id="contact">
-           <div class="wrapper">
-
-           </div>
+            <a href="mailto:mail@bikenation.com"><i class="fa fa-envelope" aria-hidden="true"></i>mail@bikenation.com</a>
+            <a href="tel:0000000000"><i class="fa fa-phone" aria-hidden="true"></i>00-00000000</a>
        </div>
        <div id="over-ons">
             <div class="wrapper">
@@ -74,12 +72,11 @@
         <div id="soorten-fietsen">
             <div class="wrapper">
                 <h3>Titel</h3>
-                <div id="container">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                <div class="row row-4">
+                    <div><article class="card"></article></div>
+                    <div><article class="card"></article></div>
+                    <div><article class="card"></article></div>
+                    <div><article class="card"></article></div>
                 </div>
             </div>
         </div>
