--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
            </div>
        </header>
        <div id="contact">
-            <a href="mail@bikenation.com"><i class="fa fa-envelope" aria-hidden="true"></i>mail@bikenation.com</a>
-            <a href="0000000000"><i class="fa fa-phone" aria-hidden="true"></i>00-00000000</a>
+            <a href="mailto:mail@bikenation.com"><i class="fa fa-envelope" aria-hidden="true"></i>mail@bikenation.com</a>
+            <a href="tel:0000000000"><i class="fa fa-phone" aria-hidden="true"></i>00-00000000</a>
        </div>
        <div id="over-ons">
             <div class="wrapper">
