--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <body>
        <nav>
            <div class="wrapper">
-                <img src="logo.png">
+                <div id="logo">
+                    <i class="fa fa-bicycle" aria-hidden="true"></i>       
+                </div>         
                 <div id="menu">
                     <ol>
                         <li><a href="">Home</a></li>
@@ -52,24 +54,34 @@
                <div id="header-content">
                 
                </div>
+               <div id="contact" class="row row-3">
+                    <div>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span>mail@bikenation.com</span>
+                    </div>
+                    <div>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span>00-00000000</span>
+                    </div>
+                    <div>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span>Amsterdam Netherlands</span>
+                    </div>
+                </div>
            </div>
        </header>
-       <div id="contact">
-            <a href="mailto:mail@bikenation.com"><i class="fa fa-envelope" aria-hidden="true"></i>mail@bikenation.com</a>
-            <a href="tel:0000000000"><i class="fa fa-phone" aria-hidden="true"></i>00-00000000</a>
-       </div>
-       <div id="over-ons">
+       <div id="about">
             <div class="wrapper">
                 <h3>Titel</h3>
-                <div class="card">
+                <article>
 
-                </div>
+                </article>
             </div>
        </div>
-       <div id="slider">
+       <div class="parallax">
 
        </div>
-        <div id="soorten-fietsen">
+        <div id="sorts">
             <div class="wrapper">
                 <h3>Titel</h3>
                 <div class="row row-4">
