--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>BikeNation</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
         <link href="normalize.css" rel="stylesheet">
+        <link rel="stylesheet" href="bikenation.css">
         <link href="style.css" rel="stylesheet">
         <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
     </head>
