--- a/index.html
+++ b/index.html
@@ -1,86 +1,103 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>BikeNation</title>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
-        <link href="normalize.css" rel="stylesheet">
-        <link rel="stylesheet" href="bikenation.css">
-        <link href="style.css" rel="stylesheet">
-        <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
-    </head>
-    <body>
-       <nav>
-           <div class="wrapper">
-                <div id="logo">
-                    <i class="fa fa-bicycle" aria-hidden="true"></i>       
-                </div>         
-                <div id="menu">
-                    <ol>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                            <ol>
-                                <li><a href="">Bakfiets</a></li>
-                                <li><a href="">Omafiets</a></li>
-                                <li><a href="">Mountainbike</a></li>
-                                <li><a href="">Elektrischefiets</a></li>
-                            </ol>
-                        </li>
-                        <li><a href="">Gallerij</a></li>
-                        <li><a href="">Over Ons</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Index</a></li>
-                    </ol>
-                </div>
-           </div>
-       </nav>
-       <header>
-           <div class="wrapper">
-               <div id="header-content">
-                
-               </div>
-               <div id="contact" class="row row-3">
-                    <div>
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>mail@bikenation.com</span>
-                    </div>
-                    <div>
-                        <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span>00-00000000</span>
-                    </div>
-                    <div>
-                        <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        <span>Amsterdam Netherlands</span>
-                    </div>
-                </div>
-           </div>
-       </header>
-       <div id="about">
-            <div class="wrapper">
-                <h1>Header</h1>
-                <h3>Titel</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <article>
 
-                </article>
+<head>
+    <title>BikeNation</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
+    <link href="normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="bikenation.css">
+    <link href="style.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
+</head>
+
+<body>
+    <nav>
+        <div class="wrapper">
+            <div id="logo">
+                <i class="fa fa-bicycle" aria-hidden="true"></i>
             </div>
-       </div>
-       <div class="parallax">
+            <div id="menu">
+                <ol>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        <ol>
+                            <li><a href="">Bakfiets</a></li>
+                            <li><a href="">Omafiets</a></li>
+                            <li><a href="">Mountainbike</a></li>
+                            <li><a href="">Elektrischefiets</a></li>
+                        </ol>
+                    </li>
+                    <li><a href="">Gallerij</a></li>
+                    <li><a href="">Over Ons</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Index</a></li>
+                </ol>
+            </div>
+        </div>
+    </nav>
+    <header>
+        <div class="wrapper">
+            <div id="header-content">
 
-       </div>
-        <div id="sorts">
-            <div class="wrapper">
-                <h3>Titel</h3>
-                <div class="row row-4">
-                    <div><article class="card"></article></div>
-                    <div><article class="card"></article></div>
-                    <div><article class="card"></article></div>
-                    <div><article class="card"></article></div>
+            </div>
+            <div id="contact" class="row row-3">
+                <div>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <span>mail@bikenation.com</span>
+                </div>
+                <div>
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <span>00-00000000</span>
+                </div>
+                <div>
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    <span>Amsterdam Netherlands</span>
                 </div>
             </div>
         </div>
-       <footer>
+    </header>
+    <div id="about">
+        <div class="wrapper">
+            <h1>Header</h1>
+            <h2>Titel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <article>
 
-       </footer>
-    </body>
+            </article>
+        </div>
+    </div>
+    <div class="parallax">
+
+    </div>
+    <div id="sorts">
+        <div class="wrapper">
+            <h3>Titel</h3>
+            <div class="row row-4">
+                <div>
+                    <article class="card"></article>
+                </div>
+                <div>
+                    <article class="card"></article>
+                </div>
+                <div>
+                    <article class="card"></article>
+                </div>
+                <div>
+                    <article class="card"></article>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
