--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </nav>
     <header>
         <div class="wrapper">
+            <div class="nav-filler"></div>
             <div id="header-content">
 
             </div>
