--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li><a href="">Gallerij</a></li>
                     <li><a href="">Over Ons</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="">Index</a></li>
                 </ol>
             </div>
