--- a/index.html
+++ b/index.html
@@ -97,7 +97,41 @@
         </div>
     </div>
     <footer>
+        <div id="topfooter">
+            <div class="wrapper">
+                <div class="column">
+                    <h2>Wellicht handig</h2>
+                    <ul>
+                        <li><a href="">Over ons</a></li>
+                        <li><a href="">Privacy</a></li>
+                        <li><a href="">Voorwaarden</a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+                <div class="column" id="follow">
+                    <h2>Volg ons</h2>
 
+                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a class="circle" href="https://nl-nl.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-heart" aria-hidden="true"></i></a>
+                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                </div>
+                <div class="column">
+                    <h2>Bekijk ook eens</h2>
+                    <ul>
+                        <li><a href="">Vrouwen fietsen</a></li>
+                        <li><a href="">Mountain Bikes</a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="bottomfooter">
+            <div class="wrapper">
+                <p>All rights reserved to <span class="blue-color">BikeNation</span> 2017</p>
+            </div>
+        </div>
     </footer>
 </body>
 
