Fixed issues with footer

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
         </div>
         <div id="bottomfooter">
             <div class="wrapper">
-                <p>All rights reserved to <span class="blue-color">BikeNation</span> 2017</p>
+                <p>All rights reserved to <span>BikeNation</span> 2017</p>
             </div>
         </div>
     </footer>
