--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <nav>
         <div class="wrapper">
             <div id="logo">
-                <i class="fa fa-bicycle" aria-hidden="true"></i>
+                <a href="index.html">
+                    <i class="fa fa-bicycle" aria-hidden="true"></i>
+                </a>
             </div>
             <div id="menu">
                 <ol>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ol>
                             <li><a href="">Bakfiets</a></li>
                             <li><a href="">Omafiets</a></li>
@@ -27,8 +29,8 @@
                             <li><a href="">Elektrischefiets</a></li>
                         </ol>
                     </li>
-                    <li><a href="">Gallerij</a></li>
-                    <li><a href="">Over Ons</a></li>
+                    <li><a href="gallery.html">Gallerij</a></li>
+                    <li><a href="about.html">Over Ons</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="">Index</a></li>
                 </ol>
