--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,42 @@
             </div>
         </div>
     </nav>
-    
+    <header class="small-header">
+        <div class="nav-filler"></div>
+        <div class="wrapper">
+
+        </div>
+    </header>
+    <div class="grid">
+        <div class="wrapper">
+            <div class="box wide">
+                <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box wide">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box wide">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+            <div class="box">
+                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
+            </div>
+        </div>
+    </div>
     <footer>
         <div id="topfooter">
             <div class="wrapper">
