--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="normalize.css" rel="stylesheet">
     <link href="bikenation.css" rel="stylesheet">
     <link href="contact.css" rel="stylesheet">
