--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 <head>
     <title>BikeNation // Gallery</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="bikenation.css">
     <link href="style-gallery.css" rel="stylesheet">
