--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>BikeNation - gallery</title>
+    <title>BikeNation - about us</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bikenation.css" rel="stylesheet">
-    <link href="css/style-gallery.css" rel="stylesheet">
-
+    <link href="css/about.css" rel="stylesheet">
+    
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
 
@@ -41,36 +41,6 @@
 
         </div>
     </header>
-    <div class="grid">
-        <div class="wrapper">
-            <div class="box wide">
-                <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box wide">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box wide">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-            <div class="box">
-                    <img src="https://www.rotary.nl/schoonhoven/nieuws/NIEUWSARCHIEF/nieuws49fietsengezocht/nieuws49fietsengezocht-1.jpg" alt="">
-            </div>
-        </div>
-    </div>
     <footer>
         <div id="topfooter">
             <div class="wrapper">
