--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
+    <title>BikeNation - contact us</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
-    <link href="normalize.css" rel="stylesheet">
-    <link href="bikenation.css" rel="stylesheet">
-    <link href="contact.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/bikenation.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
 
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
@@ -27,10 +28,9 @@
                             <li><a href="">Elektrischefiets</a></li>
                         </ol>
                     </li>
-                    <li><a href="">Gallerij</a></li>
-                    <li><a href="">Over Ons</a></li>
+                    <li><a href="gallery.html">Gallerij</a></li>
+                    <li><a href="about.html">Over Ons</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="">Index</a></li>
                 </ol>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 <div class="column">
                     <h2>Wellicht handig</h2>
                     <ul>
-                        <li><a href="">Over ons</a></li>
+                        <li><a href="about.html">Over ons</a></li>
                         <li><a href="">Privacy</a></li>
                         <li><a href="">Voorwaarden</a></li>
                         <li><a href=""></a></li>
@@ -106,7 +106,7 @@
                 <div class="column">
                     <h2>Bekijk ook eens</h2>
                     <ul>
-                        <li><a href="">Vrouwen fietsen</a></li>
+                        <li><a href="">Dames fietsen</a></li>
                         <li><a href="">Mountain Bikes</a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
