Designed the form on the contact page

--- a/contact.html
+++ b/contact.html
@@ -47,26 +47,46 @@
     <section class="page-content">
         <div class="wrapper">
             <form>
-                <div>
-                    <h1>Send a message!</h1>
-                    <p>We are here to answer any questions you may have about our combadi experiences. Reach out to us and we'll respond as soon as we can.
-                            
-                            Even if there is something you have always wanted to experience and can't find it on combadi, let us know and we promise we'll do our best to find it for you and send you there.</p>
-
-                    <label>Name: <span>*</span></label>
-                    <input type="text" name="name">
-                    <label>Email: <span>*</span></label>
-                    <input type="text" name="email">
-                    <label>Message: <span>*</span></label>
-                    <textarea ></textarea>
-                    <button>SUBMIT</button>
-                </div>
+                <div class="circle-big"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                <ul id="form">
+                    <li>
+                        <h1>Send a message!</h1>
+                        <p>We are here to answer any questions you may have about our combadi experiences. Reach out to us and
+                            we'll respond as soon as we can. Even if there is something you have always wanted to experience
+                            and can't find it on combadi, let us know and we promise we'll do our best to find it for you
+                            and send you there.
+                        </p>
+                    </li>
+                    <li>
+                        <div>
+                            <label>Naam: <span>*</span></label>
+                            <input type="text" name="name">
+                        </div>
+                        <div>
+                            <label>Telefoon:</label>
+                            <input type="text" name="telefoon">
+                        </div>
+                    </li>
+                    <li>
+                        <label>Email: <span>*</span></label>
+                        <input type="email" name="email">
+                    </li>
+                    <li>
+                        <label>Bericht: <span>*</span></label>
+                        <textarea id="bericht"></textarea>
+                    </li>
+                    <li>
+                        <input type="submit" value="Verstuur" />
+                    </li>
+                </ul>
             </form>
 
             <aside>
                 <div class="contact-card">
                     <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="card-title"><h1>Sander Aalbers</h1></div>
+                    <div class="card-title">
+                        <h1>Sander Aalbers</h1>
+                    </div>
                     <div class="content">
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-24606731</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> aalbers.sander@live.nl</p>
@@ -74,7 +94,9 @@
                 </div>
                 <div class="contact-card">
                     <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="card-title"><h1>Marijn Dame</h1></div>
+                    <div class="card-title">
+                        <h1>Marijn Dame</h1>
+                    </div>
                     <div class="content">
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-29008323</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> mm.dame@hotmail.com</p>
