--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 </a>
             </div>
             <div id="menu">
+                <input type="checkbox" id="menu-open">
+                <label for="menu-open"><i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
                 <ol>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
