--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div>
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                    <span>Amsterdam Netherlands</span>
+                    <span>Amsterdam, Netherlands</span>
                 </div>
             </div>
         </div>
