Changes in contact page design

--- a/contact.html
+++ b/contact.html
@@ -50,40 +50,42 @@
 
     <section class="page-content">
         <div class="wrapper">
-            <form>
+            <div class="form">
                 <div class="circle-big"><i class="fa fa-envelope" aria-hidden="true"></i></div>
-                <ul id="form">
-                    <li>
-                        <h1>Send a message!</h1>
-                        <p>We are here to answer any questions you may have about our combadi experiences. Reach out to us and
-                            we'll respond as soon as we can. Even if there is something you have always wanted to experience
-                            and can't find it on combadi, let us know and we promise we'll do our best to find it for you
-                            and send you there.
-                        </p>
-                    </li>
-                    <li>
-                        <div>
-                            <label>Naam: <span>*</span></label>
-                            <input type="text" name="name">
-                        </div>
-                        <div>
-                            <label>Telefoon:</label>
-                            <input type="text" name="telefoon">
-                        </div>
-                    </li>
-                    <li>
-                        <label>Email: <span>*</span></label>
-                        <input type="email" name="email">
-                    </li>
-                    <li>
-                        <label>Bericht: <span>*</span></label>
-                        <textarea id="bericht"></textarea>
-                    </li>
-                    <li>
-                        <input type="submit" value="Verstuur" />
-                    </li>
-                </ul>
-            </form>
+                <form>
+                    <ul id="form">
+                        <li>
+                            <h1>Verstuur een bericht!</h1>
+                            <p>We are here to answer any questions you may have about our combadi experiences. Reach out to
+                                us and we'll respond as soon as we can. Even if there is something you have always wanted
+                                to experience and can't find it on combadi, let us know and we promise we'll do our best
+                                to find it for you and send you there.
+                            </p>
+                        </li>
+                        <li>
+                            <div>
+                                <label>Naam: <span>*</span></label>
+                                <input type="text" name="name">
+                            </div>
+                            <div>
+                                <label>Telefoon:</label>
+                                <input type="text" name="telefoon">
+                            </div>
+                        </li>
+                        <li>
+                            <label>Email: <span>*</span></label>
+                            <input type="email" name="email">
+                        </li>
+                        <li>
+                            <label>Bericht: <span>*</span></label>
+                            <textarea id="bericht"></textarea>
+                        </li>
+                        <li>
+                            <input type="submit" value="Verstuur" />
+                        </li>
+                    </ul>
+                </form>
+            </div>
 
             <aside>
                 <div class="contact-card">
