--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,15 @@
         </div>
     </nav>
 
-    <section class="page-title">
+    <header class="small-header">
         <div class="wrapper">
-            <div class="nav-filler"></div>
-            <h1>Contact Us</h1>
+            <div class="text">
+                <h2>Gallery</h2>
+            </div>
         </div>
-    </section>
+    </header>
 
-    <section class="page-content">
+    <section>
         <div class="wrapper">
             <div class="form">
                 <div class="circle-big"><i class="fa fa-envelope" aria-hidden="true"></i></div>
