--- a/about.html
+++ b/about.html
@@ -16,12 +16,16 @@
     <nav>
         <div class="wrapper">
             <div id="logo">
-                <i class="fa fa-bicycle" aria-hidden="true"></i>
+                <a href="index.html">
+                    <i class="fa fa-bicycle" aria-hidden="true"></i>
+                </a>
             </div>
             <div id="menu">
+                <input type="checkbox" id="menu-open">
+                <label for="menu-open"><i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
                 <ol>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                    <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ol>
                             <li><a href="">Bakfiets</a></li>
                             <li><a href="">Omafiets</a></li>
