--- a/elektrischefiets.html
+++ b/elektrischefiets.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>BikeNation - about us</title>
+    <title>BikeNation - Elektrischefiets</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
@@ -43,7 +43,7 @@
     <header class="small-header">
         <div class="wrapper">
             <div class="text">
-                <h2>Bakfiets</h2>
+                <h2>Elektrischefiets</h2>
             </div>
         </div>
     </header>
@@ -51,7 +51,7 @@
         <div class="wrapper">
             <article>
                 <div class="card">
-                    <h1>Bakfiets</h1>
+                    <h1>Elektrischefiets</h1>
                     <h2>Omschrijving</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -155,13 +155,28 @@
                             <td>Zwart</td>
                         </tr>
                         <tr>
-                            <td><i class="fa fa-square-o" aria-hidden="true"></i></td>
-                            <td>Bak volume</td>
-                            <td>200 liter</td>
+                            <td><i class="fa fa-battery-full" aria-hidden="true"></i></td>
+                            <td>Accu</td>
+                            <td>50.000 Mah</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-clock-o" aria-hidden="true"></i></td>
+                            <td>Levensduur</td>
+                            <td>5 uur</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-road" aria-hidden="true"></i></td>
+                            <td>Actieradius</td>
+                            <td>70 km</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-angle-double-right" aria-hidden="true"></i></td>
+                            <td>Max Snelheid</td>
+                            <td>30 km/h</td>
                         </tr>
                     </table>
                 </div>
-                <h2>Prijs &mdash; &euro;500,-</h2>
+                <h2>Prijs &mdash; &euro;2300,-</h2>
                 <div class="button">
                     Bestel
                 </div>
