--- a/mountainbike.html
+++ b/mountainbike.html
@@ -43,7 +43,7 @@
     <header class="small-header">
         <div class="wrapper">
             <div class="text">
-                <h2>Bakfiets</h2>
+                <h2>Mountainbike</h2>
             </div>
         </div>
     </header>
@@ -51,7 +51,7 @@
         <div class="wrapper">
             <article>
                 <div class="card">
-                    <h1>Bakfiets</h1>
+                    <h1>Mountainbike</h1>
                     <h2>Omschrijving</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -150,14 +150,14 @@
                             <td>2 Inch</td>
                         </tr>
                         <tr>
+                            <td><i class="fa fa-circle-o" aria-hidden="true"></i></td>
+                            <td>Profiel diepte</td>
+                            <td>2 mm</td>
+                        </tr>
+                        <tr>
                             <td><i class="fa fa-paint-brush" aria-hidden="true"></i></td>
                             <td>Kleur</td>
                             <td>Zwart</td>
-                        </tr>
-                        <tr>
-                            <td><i class="fa fa-square-o" aria-hidden="true"></i></td>
-                            <td>Bak volume</td>
-                            <td>200 liter</td>
                         </tr>
                     </table>
                 </div>
