--- a/gallery.html
+++ b/gallery.html
@@ -27,10 +27,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ol>
-                            <li><a href="">Bakfiets</a></li>
-                            <li><a href="">Omafiets</a></li>
-                            <li><a href="">Mountainbike</a></li>
-                            <li><a href="">Elektrischefiets</a></li>
+                            <li><a href="bakfiets.html">Bakfiets</a></li>
+                            <li><a href="omafiets.html">Omafiets</a></li>
+                            <li><a href="mountainbike.html">Mountainbike</a></li>
+                            <li><a href="elektrischefiets.html">Elektrischefiets</a></li>
                         </ol>
                     </li>
                     <li><a href="gallery.html">Gallerij</a></li>
