Added some details

--- a/elektrischefiets.html
+++ b/elektrischefiets.html
@@ -177,7 +177,7 @@
                     </table>
                 </div>
                 <h2>Prijs &mdash; &euro;2300,-</h2>
-                <div class="button">
+                <div class="button purple">
                     Bestel
                 </div>
             </aside>
