--- a/mountainbike.html
+++ b/mountainbike.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>BikeNation - about us</title>
+    <title>BikeNation - Mountainbike</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
@@ -162,7 +162,7 @@
                     </table>
                 </div>
                 <h2>Prijs &mdash; &euro;500,-</h2>
-                <div class="button">
+                <div class="button purple">
                     Bestel
                 </div>
             </aside>
