--- a/contact.html
+++ b/contact.html
@@ -22,20 +22,40 @@
             </div>
             <div id="menu">
                 <input type="checkbox" id="menu-open">
-                <label for="menu-open"><i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
+                <label for="menu-open">
+                    <i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="bikes.html">Fietsen
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </a>
                         <ol>
-                            <li><a href="">Bakfiets</a></li>
-                            <li><a href="">Omafiets</a></li>
-                            <li><a href="">Mountainbike</a></li>
-                            <li><a href="">Elektrischefiets</a></li>
+                            <li>
+                                <a href="">Bakfiets</a>
+                            </li>
+                            <li>
+                                <a href="">Omafiets</a>
+                            </li>
+                            <li>
+                                <a href="">Mountainbike</a>
+                            </li>
+                            <li>
+                                <a href="">Elektrischefiets</a>
+                            </li>
                         </ol>
                     </li>
-                    <li><a href="gallery.html">Gallerij</a></li>
-                    <li><a href="about.html">Over Ons</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="gallery.html">Gallerij</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Over Ons</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ol>
             </div>
         </div>
@@ -51,9 +71,11 @@
     <section class="page-content">
         <div class="wrapper">
             <div class="form">
-                <div class="circle-big"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                <div class="circle-big">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </div>
                 <form>
-                    <ul id="form">
+                    <ul>
                         <li>
                             <h1>Verstuur een bericht!</h1>
                             <p>We are here to answer any questions you may have about our combadi experiences. Reach out to
@@ -64,7 +86,9 @@
                         </li>
                         <li>
                             <div>
-                                <label>Naam: <span>*</span></label>
+                                <label>Naam:
+                                    <span>*</span>
+                                </label>
                                 <input type="text" name="name">
                             </div>
                             <div>
@@ -73,11 +97,15 @@
                             </div>
                         </li>
                         <li>
-                            <label>Email: <span>*</span></label>
+                            <label>Email:
+                                <span>*</span>
+                            </label>
                             <input type="email" name="email">
                         </li>
                         <li>
-                            <label>Bericht: <span>*</span></label>
+                            <label>Bericht:
+                                <span>*</span>
+                            </label>
                             <textarea id="bericht"></textarea>
                         </li>
                         <li>
@@ -90,20 +118,17 @@
             <aside>
                 <div class="contact-card">
                     <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="card-title">
+                    <div class="content">                            
                         <h1>Sander Aalbers</h1>
-                    </div>
-                    <div class="content">
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-24606731</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> aalbers.sander@live.nl</p>
                     </div>
                 </div>
+
                 <div class="contact-card">
                     <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="card-title">
+                    <div class="content">                            
                         <h1>Marijn Dame</h1>
-                    </div>
-                    <div class="content">
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-29008323</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> mm.dame@hotmail.com</p>
                     </div>
@@ -118,34 +143,39 @@
                 <div class="column">
                     <h2>Wellicht handig</h2>
                     <ul>
-                        <li><a href="about.html">Over ons</a></li>
+                        <li><a href="about.html">Over ons</a> </li>
                         <li><a href="">Privacy</a></li>
                         <li><a href="">Voorwaarden</a></li>
-                        <li><a href=""></a></li>
                     </ul>
                 </div>
-                <div class="column" id="follow">
+                <div class="column follow">
                     <h2>Volg ons</h2>
 
-                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://nl-nl.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://plus.google.com/"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://www.instagram.com/?hl=nl"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a class="circle" href="https://twitter.com/?lang=nl">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://nl-nl.facebook.com/">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://plus.google.com/">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://www.instagram.com/?hl=nl">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
                 </div>
                 <div class="column">
                     <h2>Bekijk ook eens</h2>
                     <ul>
                         <li><a href="">Dames fietsen</a></li>
                         <li><a href="">Mountain Bikes</a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div id="bottomfooter">
             <div class="wrapper">
-                <p>All rights reserved to <span>BikeNation</span> 2017</p>
+                <p>All rights reserved to<span>BikeNation</span> 2017</p>
             </div>
         </div>
     </footer>
